# revive-octave-jit

./: 02.patch  03.patch  06.patch  07.patch  08.patch  09.patch  11.patch  15.patch  16.patch  18.patch  README.md  octave_01.patch  octave_04.patch  octave_05.patch  octave_10.patch  octave_12.patch  octave_13.patch  octave_14.patch  octave_17.patch
octave/4.3.91/: README.md  make-fails-LLVM-3.5.2  make-fails-LLVM-3.6.2  make-fails-LLVM-3.7.1  make-fails-LLVM-3.9.1
problems/IRBuilder/: README.md  configure.ac  test.bash  test_IRBuilder_2.cc  test_IRBuilder_3.cc
problems/complex/: jit_bug55469.m
problems/createAlwaysInliner/: README.md  test_createAlwaysInlinerPass.cc
